--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,8 @@ mybatis.mapper-locations=classpath:mapper/**/**.xml
 streamlit.mode=local
 streamlit.ai-server-dir=..
 
+# 로컬 개발용
+ai.server.base-url=${AI_SERVER_BASE_URL:http://localhost}
+
+# AWS 배포용 (현재 사용 중인 서버 IP)
+#ai.server.base-url=${AI_SERVER_BASE_URL:http://3.35.97.120}
